Fix top margin spacing for landing page

--- a/Sites/complaintapp/app/assets/stylesheets/default.scss
+++ b/Sites/complaintapp/app/assets/stylesheets/default.scss
@@ -25,6 +25,10 @@ a {
 
 }
 
+.landing_pg {
+	padding-top: 5vh;
+}
+
 .button {
   font: bold 11px Arial;
   text-decoration: none;
